--- a/JJ2/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/JJ2/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -170,7 +170,7 @@ Object="\"Object\" "
 FbxExportOption="\"Object\" "
 WidgetComponent="\"Object\" \"Object.Rendering.OverrideMaterials\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Tags.ComponentTags\" "
 MeshComponent="\"Object\" \"Object.Rendering.OverrideMaterials\" \"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Tags.ComponentTags\" "
-PrimitiveComponent="\"Object\" \"Object.Rendering.OverrideMaterials\" \"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Tags.ComponentTags\" "
+PrimitiveComponent="\"Object\" "
 SceneComponent="\"Object\" "
 ActorComponent="\"Object\" "
 GeneralProjectSettings="\"Object\" "
@@ -1995,7 +1995,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/Textures/Info
+ContentBrowserDrawer.SelectedPaths=/Game/Props
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -2049,25 +2049,25 @@ ContentBrowserTab2.ThumbnailSize=2
 ContentBrowserTab2.CurrentViewType=1
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Materials/Info/Info1
-MRUItem1=/Game/Materials/Info/Myth1B
-MRUItem2=/Game/Materials/Info/Myth1F
-MRUItem3=/Game/Materials/Litter/M_C2
-MRUItem4=/Game/Props/paper
-MRUItem5=/Game/Blueprints/Test/Info
-MRUItem6=/Game/Props/bandstand
-MRUItem7=/Game/Props/heron
-MRUItem8=/Game/Materials/MI_heron
-MRUItem9=/Game/Props/hheron
-MRUItem10=/Game/Props/Bushes/Bush_06
-MRUItem11=/Game/Textures/bandstand_grey_001_BaseColor
-MRUItem12=/Game/Materials/MI_bandtsnad
-MRUItem13=/Game/Blueprints/Widgets/WordWidget
-MRUItem14=/Game/Blueprints/Widgets/OverlayWidget
-MRUItem15=/Game/Audio/Cues/MumblesCue
-MRUItem16=/Game/Materials/MV_CNAOR
-MRUItem17=/Game/Materials/MI_bandstyand
-MRUItem18=/Game/Blueprints/Widgets/VRPawn
+MRUItem0=/Game/Blueprints/Widgets/VRPawn
+MRUItem1=/Game/Materials/Info/Info1
+MRUItem2=/Game/Materials/Info/Myth1B
+MRUItem3=/Game/Materials/Info/Myth1F
+MRUItem4=/Game/Materials/Litter/M_C2
+MRUItem5=/Game/Props/paper
+MRUItem6=/Game/Blueprints/Test/Info
+MRUItem7=/Game/Props/bandstand
+MRUItem8=/Game/Props/heron
+MRUItem9=/Game/Materials/MI_heron
+MRUItem10=/Game/Props/hheron
+MRUItem11=/Game/Props/Bushes/Bush_06
+MRUItem12=/Game/Textures/bandstand_grey_001_BaseColor
+MRUItem13=/Game/Materials/MI_bandtsnad
+MRUItem14=/Game/Blueprints/Widgets/WordWidget
+MRUItem15=/Game/Blueprints/Widgets/OverlayWidget
+MRUItem16=/Game/Audio/Cues/MumblesCue
+MRUItem17=/Game/Materials/MV_CNAOR
+MRUItem18=/Game/Materials/MI_bandstyand
 MRUItem19=/AchievementSystem/BP_UIAchievementCustomisation
 
 [AssetEditorToolkitTabLocation]
@@ -2308,7 +2308,7 @@ RecentlyPlaced=/Script/Engine.TriggerBox;/Engine/Transient.ActorFactoryTriggerBo
 
 [RootWindow]
 ScreenPosition=X=162.000 Y=0.000
-WindowSize=X=1276.000 Y=740.000
+WindowSize=X=1276.000 Y=742.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -2329,7 +2329,7 @@ UNR=../../../../../../Users/isabe/Documents/GitHub/Jeavons_VR/JJ2/Content/VRTemp
 BRUSH=../../../../../../Users/isabe/Documents/GitHub/Jeavons_VR/JJ2/Content/
 FBX=../../../../../../Users/isabe/Documents/GitHub/Jeavons_VR/JJ2/Content/
 FBXAnim=../../../../../../Users/isabe/Documents/GitHub/Jeavons_VR/JJ2/Content/
-GenericImport=../../../../../../Users/isabe/Desktop/myth 3 back.png
+GenericImport=../../../../../../Users/isabe/Downloads/paper.fbx
 GenericExport=../../../../../../Users/isabe/Downloads/heron.FBX
 GenericOpen=../../../../../../Users/isabe/Documents/GitHub/Jeavons_VR/JJ2/Content/
 GenericSave=../../../../../../Users/isabe/Documents/GitHub/Jeavons_VR/JJ2/Content/
@@ -3504,7 +3504,7 @@ TakeRecorderWorldSourceSettings=
 AchievementSystemSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_Android,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_HoloLens,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_IOS,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_Linux,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_Mac,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_Windows,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierResponseCurveExponential,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,HoloLensTargetSettings.Packaging.NeutralResources,HoloLensTargetSettings.Packaging.LocalizedResources,IOSRuntimeSettings.Build.Remote Build Options,TakeRecorderProjectSettings.Animation Recorder.TimecodeBoneMethod,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Materials.MaterialList,StaticMeshComponent.Collision.Collision,PostProcessVolume.TransformCommon.Transform,PostProcessVolume.Lens.Lens,PostProcessVolume.Color Grading.Color Grading,CineCameraActor.PostProcess.Lens,TriggerBox.Collision.Collision,TriggerBox.TransformCommon.Transform,TriggerBox.Physics.ConstraintsGroup,StaticMeshComponent.TransformCommon.Transform,PostProcessVolume.Reflections.Reflections,BP_BinLitter_C.TransformCommon.Transform,CameraComponent.PostProcess.Lens,
 StaticMeshComponent=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Materials.MaterialList,StaticMeshComponent.Collision.Collision,GameMapsSettings.DefaultModes.SelectedGameModeDetails,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_Android,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_HoloLens,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_IOS,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_Linux,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_Mac,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_Windows,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierResponseCurveExponential,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,HoloLensTargetSettings.Packaging.NeutralResources,HoloLensTargetSettings.Packaging.LocalizedResources,IOSRuntimeSettings.Build.Remote Build Options,TakeRecorderProjectSettings.Animation Recorder.TimecodeBoneMethod,PostProcessVolume.TransformCommon.Transform,PostProcessVolume.Lens.Lens,PostProcessVolume.Color Grading.Color Grading,CineCameraActor.PostProcess.Lens,TriggerBox.Collision.Collision,StaticMeshComponent.TransformCommon.Transform,PostProcessVolume.Reflections.Reflections,TriggerBox.TransformCommon.Transform,TriggerBox.Physics.ConstraintsGroup,
 PhysicsConstraintComponent=PhysicsConstraintComponent.Constraint Behavior.Projection,PhysicsConstraintComponent.Angular Limits.Swing Limits,PhysicsConstraintComponent.Angular Limits.Twist Limits,PhysicsConstraintComponent.LinearMotor.Linear Position Drive,PhysicsConstraintComponent.LinearMotor.Linear Velocity Drive,PhysicsConstraintComponent.AngularMotor.Orientation Drive,PhysicsConstraintComponent.AngularMotor.Velocity Drive,
-SceneComponent=
+SceneComponent=GameMapsSettings.DefaultModes.SelectedGameModeDetails,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_Android,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_HoloLens,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_IOS,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_Linux,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_Mac,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_Windows,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierResponseCurveExponential,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Materials.MaterialList,StaticMeshComponent.Collision.Collision,HoloLensTargetSettings.Packaging.NeutralResources,HoloLensTargetSettings.Packaging.LocalizedResources,IOSRuntimeSettings.Build.Remote Build Options,TakeRecorderProjectSettings.Animation Recorder.TimecodeBoneMethod,PostProcessVolume.TransformCommon.Transform,PostProcessVolume.Lens.Lens,PostProcessVolume.Color Grading.Color Grading,CineCameraActor.PostProcess.Lens,TriggerBox.Collision.Collision,PostProcessVolume.Reflections.Reflections,TriggerBox.TransformCommon.Transform,TriggerBox.Physics.ConstraintsGroup,StaticMeshComponent.TransformCommon.Transform,BP_BinLitter_C.TransformCommon.Transform,CameraComponent.PostProcess.Lens,
 NavModifierVolume=GameMapsSettings.DefaultModes.SelectedGameModeDetails,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_Android,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_HoloLens,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_IOS,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_Linux,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_Mac,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_Windows,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierResponseCurveExponential,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Materials.MaterialList,StaticMeshComponent.Collision.Collision,HoloLensTargetSettings.Packaging.NeutralResources,HoloLensTargetSettings.Packaging.LocalizedResources,IOSRuntimeSettings.Build.Remote Build Options,TakeRecorderProjectSettings.Animation Recorder.TimecodeBoneMethod,PostProcessVolume.TransformCommon.Transform,PostProcessVolume.Lens.Lens,PostProcessVolume.Color Grading.Color Grading,CineCameraActor.PostProcess.Lens,TriggerBox.Collision.Collision,PostProcessVolume.Reflections.Reflections,TriggerBox.TransformCommon.Transform,TriggerBox.Physics.ConstraintsGroup,StaticMeshComponent.TransformCommon.Transform,BP_BinLitter_C.TransformCommon.Transform,CameraComponent.PostProcess.Lens,
 BrushComponent=
 StaticMeshActor=GameMapsSettings.DefaultModes.SelectedGameModeDetails,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_Android,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_HoloLens,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_IOS,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_Linux,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_Mac,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_Windows,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierResponseCurveExponential,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Materials.MaterialList,StaticMeshComponent.Collision.Collision,HoloLensTargetSettings.Packaging.NeutralResources,HoloLensTargetSettings.Packaging.LocalizedResources,IOSRuntimeSettings.Build.Remote Build Options,TakeRecorderProjectSettings.Animation Recorder.TimecodeBoneMethod,PostProcessVolume.TransformCommon.Transform,PostProcessVolume.Lens.Lens,PostProcessVolume.Color Grading.Color Grading,CineCameraActor.PostProcess.Lens,TriggerBox.Collision.Collision,PostProcessVolume.Reflections.Reflections,TriggerBox.TransformCommon.Transform,TriggerBox.Physics.ConstraintsGroup,StaticMeshComponent.TransformCommon.Transform,BP_BinLitter_C.TransformCommon.Transform,CameraComponent.PostProcess.Lens,StaticMeshActor.Physics.ConstraintsGroup,
